
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-experiment-governance"
version = "0.1.0"
description = "Turn experiment tracking into a governance product with model lineage, run reviews, and deployment-readiness checks."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
